--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.2
   snapping_sheet: ^3.1.0
   flutter_svg: ^2.0.10
+  file_picker: ^8.1.6
 
 dev_dependencies:
   flutter_test:
