--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   snapping_sheet: ^3.1.0
   flutter_svg: ^2.0.10
   file_picker: ^8.1.6
+  google_fonts: ^6.2.1
+  lucide_icons: ^0.257.0
 
 dev_dependencies:
   flutter_test:
